fixed overflow bug

--- a/app/assets/stylesheets/_globals.scss
+++ b/app/assets/stylesheets/_globals.scss
@@ -34,7 +34,6 @@ a{
 	max-width:1050px;
 	padding:0 20px;
 	clear: both;
-	overflow: hidden;
 }
 
 .narrow{
